--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
                 "\\m7\\Iam\\IamManagerServiceProvider"
             ],
             "aliases": {
-                "Manager": "m7\\Iam\\Facades\\Manager"
+                "Manager": "\\m7\\Iam\\Facades\\Manager"
             }
         }
     }
