--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "minimum-stability": "dev",
     "require": {
         "guzzlehttp/guzzle": "^6.3",
-        "ext-json": "*"
+        "ext-json": "*",
+        "doctrine/dbal": "^2.9"
     },
     "autoload": {
         "psr-4": {
