added laravel as required dependency

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "m7/iam",
-    "description": "Laravel wrapper for IAM created by M7 s.r.o.",
+    "description": "Laravel 6+ wrapper for IAM created by M7 s.r.o.",
     "keywords": [ "iam", "laravel", "sdk", "api", "m7"],
     "type": "wrapper",
     "license": "MIT",
@@ -17,7 +17,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": "^7.2",
-        "laravel/framework": ">=6.0",
+        "laravel/framework": "^6.0",
         "guzzlehttp/guzzle": "^6.3",
         "ext-json": "*",
         "doctrine/dbal": "^2.9"
