--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "laravel/framework": "^6.0",
         "guzzlehttp/guzzle": "^6.3",
         "ext-json": "*",
-        "doctrine/dbal": "^2.9"
+        "doctrine/dbal": "^2.9",
+        "firebase/php-jwt": "^5.0"
     },
     "autoload": {
         "psr-4": {
